--- a/window.ui
+++ b/window.ui
@@ -2,7 +2,7 @@
 <interface>
   <!-- interface requires gtk+ 3.8 -->
   <template class="TextEditorWindow" parent="GtkApplicationWindow">
-    <property name="title" translatable="yes">Text Editor</property>
+    <property name="title" translatable="yes">Obtuse</property>
     <property name="default-width">600</property>
     <property name="default-height">400</property>
     <child>
@@ -12,6 +12,26 @@
 	<child>
 	  <object class="GtkHeaderBar" id="header">
 	    <property name="visible">True</property>
+
+	    <child>
+	      <object class="GtkLabel" id="lines_label">
+		<property name="visible">False</property>
+		<property name="label" translatable="yes">Lines:</property>
+	      </object>
+	      <packing>
+		<property name="pack-type">start</property>
+	      </packing>
+	    </child>
+	    
+	    <child>
+	      <object class="GtkLabel" id="lines">
+		<property name="visible">False</property>
+	      </object>
+	      <packing>
+		<property name="pack-type">start</property>
+	      </packing>
+	    </child>
+	    
 	    <child type="title">
 	      <object class="GtkStackSwitcher" id="tabs">
 		<property name="visible">True</property>
